# vector-store-relevancy-benchmark

./: .gitignore  Cargo.toml  README.md  dbpedia-1536.urls  dbpedia-3072.urls  download.sh  wikipedia-768.urls
benchmarks/: Cargo.toml
benchmarks/src/: arroy_bench.rs  dataset.rs  lib.rs  main.rs  qdrant.rs  qdrant_bench.rs  scenarios.rs
parquet2mat/: Cargo.toml
parquet2mat/src/: main.rs
src/: arroy_bench.rs  dataset.rs  lib.rs  main.rs  qdrant.rs
