[package]
name = "vector-store-relevancy-benchmark"
version = "0.1.0"
edition = "2021"

[dependencies]
ureq = "2.10.0"
anyhow = "1.0.86"
bytemuck = "1.16.1"
memmap2 = "0.9.4"
arroy = { path = "../arroy" }
byte-unit = "5.1.4"
heed = "0.20.3"
tempfile = "3.10.1"
rand = "0.8.5"
serde_json = "1.0.120"
serde = { version = "1.0.204", features = ["derive"] }
indicatif = "0.17.8"
tokio = { version = "1.38.0", features = ["full"] }
reqwest = "0.12.5"
async-channel = "2.3.1"
dockertest = "0.4.0"
qdrant-client = "1.11.2"
futures-util = "0.3.30"

[profile.release]
debug = true
