[package]
name = "vector-store-relevancy-benchmark"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
arroy = { path = "../arroy" }
async-channel = "2.3.1"
byte-unit = "5.1.4"
bytemuck = "1.16.1"
futures-util = "0.3.30"
heed = "0.20.3"
indicatif = "0.17.8"
memmap2 = "0.9.4"
qdrant-client = "1.11.2"
rand = "0.8.5"
reqwest = "0.12.5"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
tempfile = "3.10.1"
tokio = { version = "1.38.0", features = ["full"] }
ureq = "2.10.0"
walkdir = "2.5.0"

[profile.release]
debug = true
