[package]
name = "benchmarks"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
# arroy = { git = "https://github.com/meilisearch/arroy", rev = "2386594" }
arroy = { path = "../../arroy" }
byte-unit = "5.1.4"
bytemuck = "1.16.1"
clap = { version = "4.5.18", features = ["derive"] }
enum-iterator = "2.1.0"
futures-util = "0.3.30"
heed = "0.20.3"
memmap2 = "0.9.4"
qdrant-client = "1.11.2"
rand = "0.8.5"
rayon = "1.10.0"
reqwest = "0.12.5"
roaring = "0.10.6"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
tempfile = "3.10.1"
tokio = { version = "1.38.0", features = ["full"] }
walkdir = "2.5.0"
